force-app/main/default/objects/Apttus_Config2__ProductOptionComponent__c/fields/Export_Parent_Product__c.field-meta.xml
<CustomField>
    <fullName>Export_Parent_Product__c</fullName>
    <formula>Apttus_Config2__ParentProductId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Export Parent Product</label>
    <type>Text</type>
</CustomField>