force-app/main/default/objects/Apttus_Config2__ProductOptionComponent__c/fields/Export_Product_Component_Name__c.field-meta.xml
<CustomField>
    <fullName>Export_Product_Component_Name__c</fullName>
    <formula>Apttus_Config2__ComponentProductId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Export Product Component Name</label>
    <type>Text</type>
</CustomField>