force-app/main/default/objects/Apttus_Config2__ProductOptionComponent__c/fields/ExportOptionGroupName__c.field-meta.xml
<CustomField>
    <fullName>ExportOptionGroupName__c</fullName>
    <formula>Apttus_Config2__ProductOptionGroupId__r.ExportOptionGroupName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Export Option Group Name</label>
    <type>Text</type>
</CustomField>